--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Feb 21 01:29:38 2006  Tim Janik  <timj@gtk.org>
+
+	* docs/beastdefs.doxi: CVS copied here from web/.
+
 Tue Feb 21 01:26:43 2006  Tim Janik  <timj@gtk.org>
 
 	* docs/Makefile.am: build HTML docs with doxer.
