--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Feb 26 18:19:47 2006  Tim Janik  <timj@gtk.org>
+
+	* web/Makefile.am: CVS copied from web/Makefile.
+
 Sat Feb 25 18:53:01 2006  Tim Janik  <timj@gtk.org>
 
 	* docs/Makefile.am: minor rule optimizations.
