--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Feb 26 18:23:35 2006  Tim Janik  <timj@gtk.org>
+
+	* web/Makefile: removed.
+
 Sun Feb 26 18:19:47 2006  Tim Janik  <timj@gtk.org>
 
 	* web/Makefile.am: CVS copied from web/Makefile.
