--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Feb 28 01:33:06 2006  Tim Janik  <timj@gtk.org>
+
+	* Makefile.am:
+	* configure.in: added doxer/ to automake tree.
+
 Tue Feb 28 00:29:43 2006  Tim Janik  <timj@gtk.org>
 
 	* web/Makefile.am:
