--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Sat Mar  4 18:41:08 2006  Tim Janik  <timj@gtk.org>
+
+	* tests/filter-defs.gp: 
+	* tests/arrows.gp: CVS copied.
+
 Thu Feb 23 23:15:32 2006  Tim Janik  <timj@gtk.org>
 
 	* bseautodoc.c (show_structdoc): fixed records being treated like sequences.
