--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Sat Mar  4 18:41:59 2006  Tim Janik  <timj@gtk.org>
+
+	* gsl.gnuplot:
+	* gslarrows: removed.
+
 Sat Mar  4 18:41:08 2006  Tim Janik  <timj@gtk.org>
 
 	* tests/filter-defs.gp: 
