--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,12 @@
+Sat Mar  4 18:47:30 2006  Tim Janik  <timj@gtk.org>
+
+	* tests/Makefile.am (plottest): added plottest rule
+	(moved here from gslmakefile.inc).
+
+	* gslmakefile.inc: removed gsltestoutput test rule.
+
+	* tests/filter-defs.gp: increase precision (10000 samples).
+
 Sat Mar  4 18:41:59 2006  Tim Janik  <timj@gtk.org>
 
 	* gsl.gnuplot:
