--- a/TODO
+++ b/TODO
@@ -531,12 +531,7 @@ SCRIPTS:
 GSL:
   * sample loader currently hard codes 440.0 for osc_freq
     Person        S T
-75- [stw]         2 9 LP -> LP transforms or zero/poles
-76- [stw]         1 8 3-stage joining FFT code
-76- [stw]         4   /usr/share/doc/sfftw-dev/README.hacks
-76- [stw]         1 7 FFT L-case optimiaztions
-74- [stw/timj]    6 5 filter evaluate function (to draw graph)
-  - [stw/timj]    6 3 1) OscTableEntry sizes (wave_table_size ())
+  - [stw/timj]    6 5 filter evaluate function (to draw graph)
   - [stw/timj]    7 3 2) development of gsl_osc_table_create() frequencies
   - [stw/timj]    4 4 3) PWM scaling
   - [stw/timj]    6 6 Filter boundary conditions?
@@ -544,15 +539,12 @@ GSL:
                     Filter: Oppenheim Schaefer page.441 2stage filters implementation
                         (2stage pair finding by single (zero, pole) pair plus
                         conj. complex pair)
-  - [timj]        9   Buffered data handles for coarse seek
-  - [timj]        8   WaveOsc: prop for stereo channel
   - [timj]        2 9 API for lp/hp/bp/bs generation from array of roots and poles
                       (requires zero and poles with ->im != 0 to occour in
                       conjugated complex pairs)
-  - [timj]        6   in API and docs, s/roots/zeros/
+
   - [timj]        4   gsltests: change freq input, so that [0..1] => [0..pi]
   - [timj]        5   gsltest: swap epsilon and steepness params for t2* filters
-  - [timj]        7 6 Async DCache read-ahead thread creation
 
 AutoLooper:
 - bsewavetool: fix thinout command to document the 4-halftone distance criteria and make it configurable
