--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,7 @@
+Mon Mar  6 20:28:02 2006  Tim Janik  <timj@gtk.org>
+
+	* birnetmsg.[hc]: CVS copied from beast/sfi/sfilog.[hc].
+
 Mon Mar  6 20:24:04 2006  Tim Janik  <timj@gtk.org>
 
 	* birnetthread.[hc]: CVS copied from beast/sfi/sfithreads.[hc].
