--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar  9 18:06:55 2006  Tim Janik  <timj@gtk.org>
+
+	* Makefile.am: install birnet.h.
+
 Thu Mar  9 02:57:33 2006  Tim Janik  <timj@gtk.org>
 
 	* birnetcore.cc (birnet_init): allow double initialization.
