--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Thu Mar  9 20:52:59 2006  Tim Janik  <timj@gtk.org>
+
+	* acbeast.m4:
+	* configure.in: 
+	* birnet/configure.inc: applied patch from Ralf Wildenhues
+	<Ralf.Wildenhues@gmx.de> to work with newer autoconf.
+	 clarified licensing to mention LGPL explicitely in all places.
+
+	* autogen.sh: clear autom4te cache. clarified licensing to mention
+	LGPL explicitely in all places.
+
 Thu Mar  9 18:19:02 2006  Tim Janik  <timj@gtk.org>
 
 	* web/download.doxi:
