--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Mar  9 23:42:19 2006  Tim Janik  <timj@gtk.org>
+
+	* tests/*: fixed or changed the license to LGPL with permission
+	from Stefan Westerfeld (required for some files).
+
 Thu Mar  9 21:08:13 2006  Tim Janik  <timj@gtk.org>
 
 	* tools/bsefcompare.cc:
