--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Mar 10 02:52:18 2006  Tim Janik  <timj@gtk.org>
+
+	* web/wiki.doxi: use 'raw_html_title' doxer variable to set the
+	page title dynamically, based on the wiki page.
+
 Fri Mar 10 01:21:09 2006  Tim Janik  <timj@gtk.org>
 
 	* library/scripts/mixer-splitup-by-track.scm:
