--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Mar 10 19:25:50 2006  Tim Janik  <timj@gtk.org>
+
+	* web/robots.txt: disallow temporary wiki pages and the sandbox.
+
 Fri Mar 10 18:06:26 2006  Tim Janik  <timj@gtk.org>
 
 	* web/Makefile.am: install robots.txt and favicon.ico.
