--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-03-11  Jens Seidel <jseidel@cvs.gnome.org>
+
+	* de.po: Updated German translation. There is still a lot to do ...
+	* it.po: Fixed a typo.
+
 Mon Jan 30 01:32:25 2006  Tim Janik  <timj@gtk.org>
 
 	* it.po: translation update by Michele Petrecca <michelinux@alice.it>.
