--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun Mar 12 12:21:40 2006  Tim Janik  <timj@gtk.org>
+
+	* Makefile.decl: declare variables that are used in += statements.
+
+	* */Makefile.am: added include statement for Makefile.decl.
+
 Sat Mar 11 20:23:51 2006  Tim Janik  <timj@gtk.org>
 
 	* */Makefile.am: 
