--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,9 @@
+Fri Mar 17 19:41:50 2006  Tim Janik  <timj@gtk.org>
+
+	* birnetcore.h: CVS copied from birnetcore.hh.
+
+	* birnetcore.c: CVS copied from birnetcore.cc.
+
 Thu Mar  9 18:06:55 2006  Tim Janik  <timj@gtk.org>
 
 	* Makefile.am: install birnet.h.
